2005-08-11  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-search-popup.{c,h}:
	* po/POTFILES.in:
	Removed unused files.

2005-07-25  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-file-list.c:
	* src/gnome-cmd-file-selector.c:
	Removed conflicting 'static' declaration.

2005-07-21  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2005-04-22  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-04  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* gnome-commander.spec.in:
	Some cosmetics.

2005-02-26  Kostas Papadimas  <pkst@gnome.org>

        * configure.in: Added "el" (Greek) to ALL_LINGUAS.

2005-02-01  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-advrename-lexer.l:
        Fixed debian bug #288933 for amd64/gcc-4.0 compiling from Andreas Jochens (aj@andaco.de)

2005-01-30  Piotr Eljasiak  <epiotr@cvs.gnome.org>

        Updated copyright info.

2005-01-28  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* gnome-commander.spec.in:
	Fixed typo: rpm --> rpmbuild

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS

2004-11-24  Amanpreet Singh Alam<amanlinux@netscape.net>

	*configure.in: Add pa ot ALL_LINGUAS

2004-05-04  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2004-05-03  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-dir-indicator.c:
	* src/gnome-cmd-main-menu.c:
	Connected Manage Bookmarks dialog to the bookmarks shortcut.

2004-04-30  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-file-props-dialog.c:
	* src/utils.c:
	i18n & pluralized "%s bytes".

	* src/gnome-cmd-data.c:
	* src/utils.c:
	Added some minor safety precautions.

2004-04-28  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-dir-indicator.c: 
	* src/gnome-cmd-dir-indicator.h: 