@@ -1,4 +1,3 @@
 ## Process this file with automake to produce Makefile.in.
 
 SUBDIRS = test cvs fileroller
-
