@@ -1,3 +1,10 @@
+2005-08-12  Piotr Eljasiak  <epiotr@cvs.gnome.org>
+
+	* */Makefile.am:
+	* configure.in:
+	* autogen.sh:
+	Refreshed autotools scripts.
+
 2005-08-11  Piotr Eljasiak  <epiotr@cvs.gnome.org>
 
 	* src/gnome-cmd-search-popup.{c,h}:
